# gorm

./: Cargo.toml  README.md
examples/: migration_cli.rs  usage.rs
examples/tables/: mod.rs
gorm_macros/: Cargo.toml
gorm_macros/src/: from_query_result.rs  lib.rs  migration.rs  select_values.rs  selected_value_to_order_by.rs  sql_enum.rs  table.rs  update_set.rs  util.rs
gorm_test/: Cargo.toml
gorm_test/src/: main.rs
src/: bound_parameters.rs  error.rs  expr.rs  fields_list.rs  lib.rs  migration_cli.rs  selectable_tables.rs  table.rs  types.rs  util.rs
src/execution/: connection.rs  mod.rs  pool.rs  transaction.rs
src/execution/connection_pool/: connection.rs  mod.rs  transaction.rs
src/sql/: bound_parameters.rs  condition.rs  expr.rs  fields_list.rs  from_query_result.rs  insertable.rs  migration.rs  mod.rs  operators.rs  selectable_tables.rs  selected_values.rs  sql_enum.rs  sql_functions.rs  table.rs  types.rs  unique_constraint.rs  update_set.rs
src/sql/operators/: aggregate.rs  boolean.rs  mod.rs  regular.rs
src/statements/: create_table.rs  delete.rs  drop_table.rs  find.rs  insert.rs  join.rs  mod.rs  select.rs  select_from.rs  update.rs
tests/: basic.rs
