[package]
name = "gorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"gorm_macros",
	"gorm_test"
]

[dependencies]
gorm_macros = { path = "gorm_macros" }
async-trait = "0.1.56"
thiserror = "1.0.31"
futures = "0.3.21"
tokio = { version = "1.20.0", features = ["rt"] }
rust_decimal = { version = "1.25.0", features = ["db-tokio-postgres"] }
deadpool-postgres = "0.10.2"

