[package]
name = "gorm"
authors = ["Roee Shoshani"]
version = "0.1.0"
edition = "2021"
description = "An orm that is simple to use and prevents all mistakes at compile time"
repository = "https://github.com/MaderNoob/gorm"
keywords = ["orm", "sql", "database", "postgres", "async"]
categories = ["database"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["gorm_macros"]

[dependencies]
gorm_macros = { path = "gorm_macros" }
async-trait = "0.1.56"
thiserror = "1.0.31"
futures = "0.3.21"
tokio = { version = "1.20.0", features = ["rt-multi-thread"] }
rust_decimal = { version = "1.25.0", features = ["db-tokio-postgres"] }
deadpool-postgres = "0.10.2"
clap = { version = "3.2.16", features = [
  "color",
  "suggestions",
  "derive",
], optional = true }
anyhow = { version = "1.0.60", optional = true }

[features]
migration_cli = ["dep:clap", "dep:anyhow"]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["full"] }
anyhow = "1.0.60"
