[package]
name = "gorm_macros"
authors = ["Roee Shoshani"]
version = "0.1.3"
edition = "2021"
description = "An orm that is simple to use and prevents all mistakes at compile time"
repository = "https://github.com/MaderNoob/gorm"
keywords = ["orm", "sql", "database", "postgres", "async"]
categories = ["database"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.39"
syn = { version = "1.0.95", features = ["full", "printing"] }
quote = "1.0.18"
proc_macro_roids = "0.7.0"
darling = "0.14.1"
itertools = "0.10.3"
convert_case = "0.5.0"
